# near-is-aurora

./: Cargo.toml  build.sh
contract/: Cargo.toml
contract/src/: aurora.rs  lib.rs
engine-types/: Cargo.toml
engine-types/src/: lib.rs
res/: contract.wasm
